# lamppp

./: .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  Makefile  README.md  activation_8hpp_source.html  align__utils_8hpp_source.html  annotated.html  any_8hpp_source.html  assert_8hpp_source.html  autograd_2core_8hpp_source.html  autograd_2functions_2conv__ops_8hpp_source.html  autograd_2functions_2expand__ops_8hpp_source.html  autograd_2functions_2matrix__ops_8hpp_source.html  autograd_2functions_2overloads_8hpp_source.html  autograd_2functions_2reduct__ops_8hpp_source.html  autograd_2functions_2unary__ops_8hpp_source.html  batch__sample_8hpp_source.html  binary_8hpp_source.html  binary__decl_8hpp_source.html  classModule-members.html  classModule.html  classModule_1_1ModuleImpl-members.html  classModule_1_1ModuleImpl.html  classParameter.html  classes.html  classlmp_1_1autograd_1_1Variable-members.html  classlmp_1_1autograd_1_1Variable.html  classlmp_1_1detail_1_1BaseStream-members.html  classlmp_1_1detail_1_1BaseStream.html  classlmp_1_1detail_1_1CheckStream-members.html  classlmp_1_1detail_1_1CheckStream.html  classlmp_1_1nets_1_1AnyModule-members.html  classlmp_1_1nets_1_1AnyModule.html  classlmp_1_1nets_1_1AnyModule_1_1Placeholder-members.html  (+362 more)
benchmarks/: CMakeLists.txt  README.md  bench_binary.cpp  bench_binary.cu  bench_binary.cuh  bench_ops.cpp  bench_playground.cpp  bench_test.cpp  bench_torch.txt  infograph.py  op_defs.hpp  reg_bench.cpp
benchmarks/lamp3/: op_defs.hpp  reg_bench_long.cpp  reg_bench_short.cpp  reg_defs.hpp
benchmarks/lamppp/: op_defs.hpp  reg_bench.cpp  reg_bench_long.cpp  reg_bench_short.cpp  reg_defs.hpp
benchmarks/mem_pool/: value_pool.cpp  variable.cpp  variable.h  variable_mem.h
benchmarks/nets/: bench_nets.cpp  fast_layer.cpp  fast_layer.h  nn.cpp  variable.cpp  variable.h
benchmarks/output/: bench_lmp.csv  bench_lmp.txt  bench_torch.csv  processed_bench.csv
benchmarks/torch/: all_tests.py  setup.sh
benchmarks/wrapper/: bench_mat.cpp  bench_ops.cpp  engine.h  grad.h
csrc/bindings/: CMakeLists.txt  capture_mode.hpp  constructor.hpp  core.cpp  data_type.hpp  device_type.hpp  flatten.hpp  tensor.hpp  variable.hpp
csrc/bindings/functions/: binary.hpp  conv.hpp  expand.hpp  matrix.hpp  reduct.hpp  unary.hpp  view.hpp
csrc/src/inductor/: CMakeLists.txt  backend.cpp
csrc/src/nets/: CMakeLists.txt  any.cpp  module.cpp
docs/: CMakeLists.txt  Doxyfile.in  NOTES.md  THEORY.md  TODOS.md  USAGE.md  getting_started.dox  main_page.dox  using_autograd.dox  using_tensor.dox
docs/examples/: CMakeLists.txt  mnist.cpp
docs/html/: align__utils_8hpp_source.html  annotated.html  assert_8hpp_source.html  autograd_2core_8hpp_source.html  autograd_2functions_2expand__ops_8hpp_source.html  autograd_2functions_2matrix__ops_8hpp_source.html  autograd_2functions_2overloads_8hpp_source.html  autograd_2functions_2reduct__ops_8hpp_source.html  autograd_2functions_2unary__ops_8hpp_source.html  classes.html  classlmp_1_1autograd_1_1Variable.html  classlmp_1_1detail_1_1BaseStream-members.html  classlmp_1_1detail_1_1BaseStream.html  classlmp_1_1detail_1_1CheckStream.html  classlmp_1_1tensor_1_1Storage-members.html  classlmp_1_1tensor_1_1Storage.html  classlmp_1_1tensor_1_1Storage_1_1StorageImpl-members.html  classlmp_1_1tensor_1_1Storage_1_1StorageImpl.html  classlmp_1_1tensor_1_1Tensor-members.html  classlmp_1_1tensor_1_1Tensor.html  classlmp_1_1tensor_1_1TensorImpl-members.html  classlmp_1_1tensor_1_1TensorImpl.html  classlmp_1_1tensor_1_1detail_1_1AlignUtil.html  classlmp_1_1tensor_1_1detail_1_1OffsetUtil-members.html  classlmp_1_1tensor_1_1detail_1_1OffsetUtil.html  classlmp_1_1tensor_1_1detail_1_1TensorMetaHandler-members.html  classlmp_1_1tensor_1_1detail_1_1TensorMetaHandler.html  classlmp_1_1tensor_1_1detail_1_1cpu_1_1CPUOffsetUtil-members.html  classlmp_1_1tensor_1_1detail_1_1cpu_1_1CPUOffsetUtil.html  classlmp_1_1tensor_1_1detail_1_1cpu_1_1internal_1_1PtrPack-members.html  classlmp_1_1tensor_1_1detail_1_1cpu_1_1internal_1_1PtrPack.html  constructor_8hpp_source.html  data__ptr_8hpp_source.html  data__type_8hpp_source.html  device__type_8hpp_source.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_50fbfd2bce1cad617ae47d619146c10d.html  dir_5d84f6d8bb36155d82949d46edb9400b.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_706bd63121827543d5b49135ee32df17.html  (+217 more)
docs/html/search/: all_0.js  all_10.js  all_2.js  all_3.js  all_4.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_2.js  classes_5.js  classes_6.js  classes_9.js  classes_a.js  classes_c.js  classes_e.js  classes_f.js  pages_1.js  searchdata.js
docs/plans/: NOTES.md  README.md  TODOS.md
docs/plans/elementwise-kernel-fusion/: TODOS.md
src/autograd/: CMakeLists.txt  constructor.cpp  grad_utils.cpp  variable.cpp
src/autograd/functions/: basic_ops.cpp  binary_ops.cpp  conv_ops.cpp  expand_ops.cpp  matrix_ops.cpp  reduct_ops.cpp  unary_ops.cpp  view_ops.cpp
src/autograd/utils/: constructor.cpp  grad_utils.cpp
src/net/: CMakeLists.txt  module.cpp
src/nets/: CMakeLists.txt  any.cpp  module.cpp
src/nets/layers/: activation.cpp  container.cpp  dropout.cpp  linear.cpp
src/tensor/: CMakeLists.txt  align_utils.cpp  backend.cpp  fill_like.cpp  storage.cpp  tensor.cpp  tensor_helper.cpp  tensor_impl.cpp
src/tensor/backend/: cuda_backend.cpp
src/tensor/cpu/: binary.cpp  conv.cpp  expand.cpp  kernels.cpp  matrix.cpp  memory.cpp  meta_handler.cpp  offset_util.cpp  reduct.cpp  unary.cpp
src/tensor/cuda/: basic_kern.cu  binary.cu  conv.cu  (+14 more)
tests/: CMakeLists.txt  autograd_pybind.cpp  autograd_tests.cpp  operations_helper.py  playground.cpp  playground.ipynb  playground.py  playground_cpp.ipynb  pytorch_stress_test.py  sample_helper.py  tensor_tests.cpp
tests/ci/: modal_gpu.py
tests/graphs/: ops.py  runner.py  templates.py  test_graphs.py
tests/stress/: autograd_pybind.cpp  operations.py  property_test_.py  pytorch_stress_test.py  testutils.py
tests/unit/: autograd_tests.cpp  tensor_tests.cpp
(+579 files in other folders)
