[project]
name = "pylamp"
version = "0.1.0"
description = ""
authors = [
    {name = "clay-arras",email = "astrollin.neil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"

[tool.poetry.dependencies]
torch = [
    {version = "2.9.1", source = "torch-cpu-src", markers = "extra!='gpu'"},
    {version = "2.9.1", source = "torch-gpu-src", markers = "extra=='gpu'"}
]
ipykernel = "^7.1.0"
matplotlib = "^3.10.8"
numpy = "^2.4.0"
pybind11 = "^3.0.1"
pytest = "^9.0.2"

[tool.poetry.extras]
gpu = []

[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["src/pylamp"]

[tool.scikit-build.cmake]
build-type = "Debug"
define.LMP_ENABLE_CUDA = "OFF"
define.LMP_ENABLE_COVERAGE = "OFF"
define.LMP_ENABLE_TEST = "OFF"
define.LMP_ENABLE_BENCH = "OFF"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "torch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-gpu-src"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"
