[project]
name = "pylamp"
version = "0.1.0"
description = ""
authors = [{ name = "clay-arras", email = "astrollin.neil@gmail.com" }]
requires-python = ">=3.11,<3.15"
readme = "README.md"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "ipykernel>=7.1.0,<8",
    "matplotlib>=3.10.8,<4",
    "numpy>=2.4.0,<3",
    "pybind11>=3.0.1,<4",
    "pytest>=9.0.2,<10",
]

[project.optional-dependencies]
gpu = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "torch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu-src"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "torch-cpu-src", marker = "extra != 'gpu'" },
    { index = "torch-gpu-src", marker = "extra == 'gpu'" },
]

[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["src/pylamp"]

[tool.scikit-build.cmake]
build-type = "Debug"
define.LMP_ENABLE_CUDA = "OFF"
define.LMP_ENABLE_COVERAGE = "OFF"
define.LMP_ENABLE_TEST = "OFF"
define.LMP_ENABLE_BENCH = "OFF"
